<resources>
        <string name="app_name">Rest Buen Sabor</string>
        <string name="user">Email</string>
        <string name="password">Password</string>
        <string name="login">Sign In</string>
        <string name="register">Register</string>
        <string name="edituser">example@email.com</string>
        <string name="editpassw">your password</string>
        <string name="save">Save</string>
        <string name="breackfast">Breackfast</string>
        <string name="lunch">Lunch</string>
        <string name="Dinner">Dinner</string>
        <string name="drinks">Drinks</string>
        <string name="snacks">Snacks</string>
        <string name="mensajeError">Invalid Username or Password</string>
        <string name="or">or</string>
        <string name="breakfast">Breakfast</string>
        <string name="healthy">Healthy</string>
        <string name="traditional">Traditional</string>
        <string name="cereal">Cereal</string>
        <string name="btnbreakfast">Request</string>
        <string name="forgot">Forgot Password? </string>
        <string name="identity">Identification Number </string>
        <string name="name">First Name </string>
        <string name="Lastname">Last Name</string>
        <string name="address">Address </string>
        <string name="phone">Phone Number </string>
        <string name="btncontinue">Continue </string>
        <string name="btncancel">Cancel </string>
        <string name="alt_userpass">Begin session with your account </string>
        <string name="alt_cancel">are you sure? </string>
        <string name="help">Help </string>
        <string name="contact">Contact us </string>
        <string name="inconst">In Construction </string>

</resources>