<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/identity"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/blue_700" />
        <EditText
            android:id="@+id/edtdocument"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/blue_700"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/Lastname"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/blue_700"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/blue_700"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/blue_700"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edtphone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/blue_700"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/blue_700"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btncontinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onContinue"
            android:text="@string/btncontinue"
            android:backgroundTint="@color/blue_700"
            />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btncancel"
            android:onClick="onCancel"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/blue_700"
            />


    </LinearLayout>
</LinearLayout>