<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:alpha="0.7">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/img"
       android:layout_marginTop="100dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/user"
            android:gravity=""
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:visibility="visible"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/edtuser"
            android:layout_width="300sp"
            android:layout_height="38dp"
            android:background="@drawable/shape"
            android:hint="@string/edituser"
            android:padding="10dp"
            android:textSize="16sp"
            android:visibility="visible"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/password"
            android:gravity=""
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="15sp"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/edtpass"
            android:layout_width="300sp"
            android:layout_height="38dp"
            android:background="@drawable/shape"
            android:hint="@string/editpassw"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="onLogin"
                android:text="@string/login"
                android:backgroundTint="@color/blue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"/>
            <Button
                android:id="@+id/btnregister"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="onRegister"
                android:text="@string/register"
                android:backgroundTint="@color/blue" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btnforgot"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:text="@string/forgot"
                android:textColor="@color/gray"
                android:layout_marginTop="40dp"
                android:textStyle="bold"/>

        </LinearLayout>



    </LinearLayout>



</LinearLayout>