<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="20dp"
    tools:context=".MenuFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="clip_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/btnbreak"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:contentDescription="@string/breakfast"
                android:elevation="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/desa1" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:layout_gravity="center"/>

            <ImageButton
                android:id="@+id/btndinner"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="20dp"
                android:onClick="onDinner"
                android:scaleType="centerCrop"
                android:src="@drawable/cenas"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dinner"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity=""
            android:layout_marginTop="20dp"
            android:layout_margin="10dp">

            <ImageButton
                android:id="@+id/btnlunch"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="20dp"
                android:onClick="onLunch"
                android:scaleType="centerCrop"
                android:background="@color/white"
                android:src="@drawable/trad1"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:layout_gravity="center"/>

            <ImageButton
                android:id="@+id/btnsnack"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="20dp"
                android:onClick="onSnacks"
                android:scaleType="centerCrop"
                android:src="@drawable/snacks"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snacks"
                android:layout_gravity="center"/>


        </LinearLayout>
    </LinearLayout>


</FrameLayout>